solve spacing (margin) issues

--- a/app/javascript/packs/src/application.scss
+++ b/app/javascript/packs/src/application.scss
@@ -10,6 +10,7 @@
 // We need to override trix.css’s image gallery styles to accommodate the
 // <action-text-attachment> element we wrap around attachments. Otherwise,
 // images in galleries will be squished by the max-width: 33%; rule.
+
 .trix-content {
   .attachment-gallery {
     > action-text-attachment,
@@ -35,6 +36,10 @@
       max-width: 100% !important;
     }
   }
+}
+
+.trix-button-group--file-tools {
+  display: none !important;
 }
 
 .errors {
